--- a/styles/section.css
+++ b/styles/section.css
@@ -46,6 +46,10 @@
   color: var(--gray-200);
  }
 
+ &:hover {
+  border: 1px solid var(--gray-300);
+ }
+
 }
 
 .texto {
@@ -113,3 +117,104 @@
   width: 240px;
 }
 
+.contacts {
+  background-image: url(../assets/background/Background_Contacts.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 800px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.contacts-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+
+  h2 {
+    color: var(--gray-100);
+    padding-block: 8px;
+  }
+
+  p {
+    color: var(--gray-200);
+  }
+}
+
+#linkedin {
+  background-image: url(../assets/logo-contats/LinkedinLogo.png);
+}
+
+#instagram {
+  background-image: url(../assets/logo-contats/InstagramLogo.png);
+}
+
+#github {
+  background-image: url(../assets/logo-contats/GithubLogo.png);
+}
+
+#email {
+  background-image: url(../assets/logo-contats/EnvelopeSimple.png);
+}
+
+.setinha-azul {
+  background-image: url(../assets/logo-contats/ArrowUpRight.png);
+}
+
+.card-contats {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  background-color: var(--gray-400);
+  border-radius: 8px;
+  gap: 12px;
+  position: relative;
+
+  span {
+  width: 28px;
+  height: 28px;
+
+  display: inline-block;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+  h3 {
+    color: var(--gray-200);
+  }
+
+  div {
+    position: absolute;
+    right: 20px;
+  }
+
+  &:hover {
+    border: 1px solid var(--blue);
+  }
+}
+
+.column-contats {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  margin-top: 48px;
+}
+
+.setinha-azul {
+  display: flex;
+  width: 20px;
+  height: 20px;
+  justify-self: end;
+
+  display: inline-block;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
