--- a/styles/utility.css
+++ b/styles/utility.css
@@ -15,6 +15,10 @@
   font: 800 16px/120% var(--font-family-asap);
 }
 
+.tittle-md {
+  font: 800 24px/120% var(--font-family-asap);
+}
+
 .text-sm {
   font: normal 14px/140% var(--font-family-maven);
 }
