--- a/styles/section.css
+++ b/styles/section.css
@@ -9,17 +9,18 @@
   justify-content: center;
   flex-direction: column;
   padding-top: 130px;
-}
 
-.header h2 {
+  h2 {
   color: var(--gray-100);
   font: 800 24px/120% var(--font-family-asap);
   margin-top: 8px;
 }
+}
+
 
 .projetos-grid {
   display: grid;
-  grid-template-columns: repeat(3, 340px);
+  grid-template-columns: repeat(3, 330px);
   gap: 24px;
   padding-top: 56px;
   justify-content: center;
@@ -32,7 +33,7 @@
   align-items: flex-start;
   background-color: var(--gray-400);
   padding-block: 14px;
-  padding-inline: 8px;
+  padding-inline: 2px;
   border-radius: 16px;
   img {
     width: 306px;
@@ -41,6 +42,7 @@
   }
     h3 {
     color: var(--gray-100);
+    padding-bottom: 8px;
  }
     p {
   color: var(--gray-200);
@@ -211,8 +213,7 @@
   display: flex;
   width: 20px;
   height: 20px;
-  justify-self: end;
-
+  
   display: inline-block;
   background-size: contain;
   background-repeat: no-repeat;
