--- a/styles/section.css
+++ b/styles/section.css
@@ -49,7 +49,10 @@
  }
 
  &:hover {
-  border: 1px solid var(--gray-300);
+  border: 0px solid transparent;
+  outline: 1px solid var(--gray-300);
+  transition: 0.3s ease;
+  transform: translateY(-4px);
  }
 
 }
@@ -182,10 +185,6 @@
   width: 28px;
   height: 28px;
 
-  display: inline-block;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
 }
   h3 {
     color: var(--gray-200);
@@ -197,7 +196,10 @@
   }
 
   &:hover {
-    border: 1px solid var(--blue);
+    border: 0px solid transparent;
+    outline: 1px solid var(--blue);
+    transition: 0.3s ease;
+    transform: translateY(-4px);
   }
 }
 
